criei um paragrafo
criei um paragrafo

--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <title>Document</title>
+    <title>website</title>
 </head>
 <body>
-    sdf
+    <h1>sergio e calvo</h1>
+    <p>
+        calvície, também conhecida como alopecia, é a condição capilar causadora da queda de cabelo. Ela pode se manifestar em qualquer pessoa, porém é mais comum entre os homens: cerca de 50% deles têm um dos tipos de calvície.
+
+Mesmo assim, o assunto ainda é cercado de tabus. Pensando nisso, e no bem-estar de quem convive com a perda capilar, preparamos um conteúdo repleto de informações. Aqui, você vai saber mais sobre os tipos de calvície, suas causas e tratamentos.
+    </p> 
 </body>
 </html> 
