--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>website</title>
 </head>
 <body>
-    <h1>sergio e calvo</h1>
+    <h1>sergio e lindao</h1>
     <p>
         calvície, também conhecida como alopecia, é a condição capilar causadora da queda de cabelo. Ela pode se manifestar em qualquer pessoa, porém é mais comum entre os homens: cerca de 50% deles têm um dos tipos de calvície.
 
